--- a/client/public/with_session.html
+++ b/client/public/with_session.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <!-- <link href="/api/me" rel="preload" as="fetch" crossorigin="anonymous"> -->
+    <link href="/api/user/{{user_id}}" rel="preload" as="fetch" crossorigin="anonymous">
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <script type="text/javascript">const profile_info={{info|safe}};</script>
+    <script type="text/javascript">const user_id={{user_id}};</script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
