--- a/client/public/with_session.html
+++ b/client/public/with_session.html
@@ -12,7 +12,7 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <script type="text/javascript">const user_id={{user_id}};</script>
+    <script type="text/javascript">const USER_ID={{user_id}};</script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
