--- a/client/public/login.html
+++ b/client/public/login.html
@@ -4,15 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <script type="text/javascript">const REDIRECT_URL={{redirect|safe}};</script>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    You must login before you can use this app.
+    <a href="{{google_auth_url}}">Login with Google</a>
   </body>
 </html>
