--- a/client/public/channel.html
+++ b/client/public/channel.html
@@ -7,12 +7,13 @@
     <link rel="icon" href="/favicon.ico">
     <title>{{channel_name}}</title>
     <link href="/api/user/{{user_id}}" rel="preload" as="fetch" crossorigin="anonymous">
+    <link href="/api/group/{{group_id}}/channels" rel="preload" as="fetch" crossorigin="anonymous">
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <script type="text/javascript">const USER_ID={{user_id}};const CHANNEL_ID={{channel_id}};</script>
+    <script type="text/javascript">const USER_ID={{user_id}};const CHANNEL_ID={{channel_id}};const GROUP_ID={{group_id}}</script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
