--- a/client/public/channel.html
+++ b/client/public/channel.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="/favicon.ico">
-    <title>{{channel_name}}</title>
-    <link href="/api/user/{{user_id}}" rel="preload" as="fetch" crossorigin="anonymous">
-    <link href="/api/group/{{group_id}}/channels" rel="preload" as="fetch" crossorigin="anonymous">
+    <title>{{title}}</title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <script type="text/javascript">const USER_ID={{user_id}};const CHANNEL_ID={{channel_id}};const GROUP_ID={{group_id}}</script>
+    <!-- This doesn't get minified so we have to do it manually -->
+    <script type="text/javascript">const CHANNEL_ID={{channel_id|safe}};const USER_INFO={{user_info|safe}};const GROUP_INFO={{group_info|safe}};const CHANNEL_LIST={{channel_list|safe}};</script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
