--- a/client/public/channel.html
+++ b/client/public/channel.html
@@ -11,18 +11,15 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <!-- This doesn't get minified so we have to do it manually -->
-    <script type="text/javascript">const GROUP_ID={{group_id|safe}};const CHANNEL_ID={{channel_id|safe}};const USER_INFO={{user_info|safe}};const GROUP_INFO={{group_info|safe}};const CHANNEL_LIST={{channel_list|safe}};</script>
+    <!--
+    This doesn't get minified so we have to do it manually (leading and trailing
+    whitespace is removed though. Also need to use var to be compatible with the
+    legacy build.
+    -->
+    <script type="text/javascript">
+      var GROUP_ID={{group_id|safe}};var CHANNEL_ID={{channel_id|safe}};var USER_ID={{user_id|safe}};var USER_INFO={{user_info|safe}};var GROUP_INFO={{group_info|safe}};var CHANNEL_LIST={{channel_list|safe}}
+    </script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
-
-<!--
-
-localhost/group/1/channel/1
-  loads the channel with an embedded JSON object
-  subsequent navigations change the url and fetch data
-  maybe recent messages should be embedded too
-
--->
