Embed the group list instead of just one group

--- a/client/public/channel.html
+++ b/client/public/channel.html
@@ -17,7 +17,7 @@
     legacy build.
     -->
     <script type="text/javascript">
-      var GROUP_ID={{group_id|safe}};var CHANNEL_ID={{channel_id|safe}};var USER_ID={{user_id|safe}};var USER_INFO={{user_info|safe}};var GROUP_INFO={{group_info|safe}};var CHANNEL_LIST={{channel_list|safe}}
+      var GROUP_ID={{group_id|safe}};var CHANNEL_ID={{channel_id|safe}};var USER_ID={{user_id|safe}};var USER_INFO={{user_info|safe}};var GROUP_INFO={{group_list|safe}}[0];var CHANNEL_LIST={{channel_list|safe}}
     </script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
