Make the login page look a little nicer
Still looks pretty basic...

--- a/client/public/channel.html
+++ b/client/public/channel.html
@@ -20,7 +20,7 @@
     legacy build.
     -->
     <script>
-      var GROUP_ID={{group_id|safe}};var CHANNEL_ID={{channel_id|safe}};var USER_ID={{user_id|safe}};var USER_LIST={{user_list|safe}};var GROUP_LIST={{group_list|safe}};var CHANNEL_LIST={{channel_list|safe}};window.history.replaceState(null,"","{{url|safe}}")
+      var GROUP_ID={{group_id|safe}};var CHANNEL_ID={{channel_id|safe}};var USER_ID={{user_id|safe}};var USER_LIST={{user_list|safe}};var GROUP_LIST={{group_list|safe}};var CHANNEL_LIST={{channel_list|safe}};history.replaceState(null,"","{{url|safe}}")
     </script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
