--- a/client/public/login.html
+++ b/client/public/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color:#343a40"> <!-- $gray-800 from Bootstrap -->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +9,18 @@
   </head>
   <body>
     <script>
-      window.history.replaceState(null,"","{{redirect_url|safe}}")
+      history.replaceState(null,"","{{redirect_url|safe}}")
     </script>
-    You must login before you can use this app.
-    <a href="{{google_auth_url}}">Login with Google</a>
+    <!--
+    HTML is minified but script and style tags are not. I'm also obsessed with
+    making the files as tiny as possible! The font-family is from Bootstrap.
+    The anchor is styled similarly to Bootstrap, using the primary color.
+    -->
+    <div style="width:100vw;height:100vh;display:flex;align-items:center;justify-content:center">
+      <div style="max-width:50%;padding:16px;text-align:center;background-color:#fff;font-size:1.5rem;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif">
+        You must login before you can use this app.
+        <a style="color:#007bff;text-decoration:none;white-space:nowrap" href="{{google_auth_url}}">Login with Google</a>
+      </div>
+    </div>
   </body>
 </html>
