--- a/client/public/login.html
+++ b/client/public/login.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body>
+  <body style="overflow:hidden;margin:0">
     <script>
       history.replaceState(null,"","{{redirect_url|safe}}")
     </script>
@@ -17,7 +17,7 @@
     The anchor is styled similarly to Bootstrap, using the primary color.
     -->
     <div style="width:100vw;height:100vh;display:flex;align-items:center;justify-content:center">
-      <div style="max-width:50%;padding:16px;text-align:center;background-color:#fff;font-size:1.5rem;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif">
+      <div style="max-width:50%;padding:16px;text-align:center;background-color:#fff;border-radius:4px;font-size:1.5rem;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif">
         You must login before you can use this app.
         <a style="color:#007bff;text-decoration:none;white-space:nowrap" href="{{google_auth_url}}">Login with Google</a>
       </div>
